[gd_scene load_steps=11 format=3 uid="uid://1nwvmn6wghcv"]

[ext_resource type="Script" path="res://Scripts/Levels/main_menu.gd" id="1_n0v58"]
[ext_resource type="Texture2D" uid="uid://bnfq8bc2278pt" path="res://Assets/UI/UI_start_low2.png" id="2_3vw0x"]
[ext_resource type="Texture2D" uid="uid://ckb7oym7s6u61" path="res://Assets/Menu/title.png" id="2_66kyh"]
[ext_resource type="PackedScene" uid="uid://b4wc07be030nk" path="res://Scenes/Global/world_parallax_bg.tscn" id="3_235or"]
[ext_resource type="Texture2D" uid="uid://bhg3qu8xty1px" path="res://Assets/UI/UI_start_high1.png" id="3_eebpj"]
[ext_resource type="Texture2D" uid="uid://bdrwml1j1b86b" path="res://Assets/UI/UI_quit_low2.png" id="4_tu51e"]
[ext_resource type="Texture2D" uid="uid://bnjecjjgvk8xy" path="res://Assets/UI/UI_quit_high1.png" id="5_yygat"]

[sub_resource type="Animation" id="Animation_q4pwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0745098, 0.0745098, 0.0745098, 0)]
}

[sub_resource type="Animation" id="Animation_hafqd"]
resource_name = "Transition"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0742188, 0.0742188, 0.0742188, 1), Color(0.0745098, 0.0745098, 0.0745098, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_awv7d"]
_data = {
"RESET": SubResource("Animation_q4pwp"),
"Transition": SubResource("Animation_hafqd")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n0v58")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 57.0
offset_right = 158.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Start" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2
texture_normal = ExtResource("2_3vw0x")
texture_hover = ExtResource("3_eebpj")
stretch_mode = 5

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2
texture_normal = ExtResource("4_tu51e")
texture_hover = ExtResource("5_yygat")
stretch_mode = 5

[node name="Footer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -24.0
offset_right = 174.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 48
text = "Phosphen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Black" type="ColorRect" parent="."]
visible = false
modulate = Color(0.0745098, 0.0745098, 0.0745098, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_awv7d")
}
autoplay = "Transition"

[node name="Title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(236, 114)
texture = ExtResource("2_66kyh")

[node name="ParallaxBackground" parent="." instance=ExtResource("3_235or")]

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
